# shoppingcomparisoncli

./: .env.example  .gitignore  README.md  aggregator.py  config.py  formatter.py  main.py  models.py  pyproject.toml  requirements.txt  resolver.py
.github/workflows/: ci.yml  reverse-engineering-docs.md  security-review.md
connectors/: base.py  bestbuy.py  ebay.py  google_shopping.py  walmart.py
tests/: test_aggregator.py  test_config.py  test_formatter.py  test_main.py  test_models.py  test_resolver.py
tests/connectors/: test_base.py  test_bestbuy.py  test_ebay.py  test_google_shopping.py  test_integration.py  test_walmart.py
