[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shoppingcomparisoncli"
version = "0.1.0"
description = "CLI tool for price comparison across US retail stores"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[tool.setuptools]
py-modules = ["aggregator", "config", "formatter", "main", "models", "resolver"]

[tool.setuptools.packages.find]
where = ["."]
include = ["connectors*"]
